encouraged to add entries for their work.

All changes can be found via git - eg, for all changes after a build:
    git log -rb3xx:
or
    https://github.com/mhammond/pywin32/compare/b3xx...main

As of build 305, installation .exe files have been deprecated; see
https://mhammond.github.io/pywin32_installers.html.

Coming in build 307, as yet unreleased
--------------------------------------
### pywin32
* Fixed VT_SAFEARRAY(VT_RECORD) which were missing the last element (#2247)
* Fixed `MFC redist DLLs not found` by preferring corresponding version but accepting different version (#2248, @andreabravetti)
* Fixed `pywintypes.error: (5, 'RegOpenKeyEx', 'Access is denied.')` when running service with debug parameter and no elevation (#2238, @jmartens)
* Fixed handling of `SyntaxError` exception from a Windows Scripting Host Python Script on Python 3.10+ (#2235, @nbbeatty)
* Add `CredGetSessionTypes` support (#2232, @CristiFati)
* Fixed `win32clipboard` increasing size of data when `SetClipboardData` used with `CF_DIB` (#2184, @CristiFati)
* Add `StoreLogoff` to `PyIMsgStore` to prevent possible hang when MAPI uninitializes or during session logoff (#2196, avivbrg)
* Enhance CredDelete to work with dictionaries (#2198, @CristiFati)
* Add UnregisterHotKey support (#2185, @CristiFati)
* IFolderView COM client support (#2180, #2181, #2182, @CristiFati)
* Release GIL when calling CreateService or StartService (#2062, @adamkbmc)
* Drop support for Internet Explorer 10 (#2229, @Avasam)
* Removed considerations for never-built Windows CE (#2218, @Avasam)
* Stopped building `winxpgui` (#2217, @Avasam)
  * Raise `DeprecationWarning` when importing `winxpgui`
  * Added `GetWindowRgnBox` to `win32gui`
  * `winxpgui.GetConsoleWindow` now aliases `win32console.GetConsoleWindow`
  * Everything else is re-exported from `win32gui`
* Fixed the `win32com.demos.ietoolbar` demo (#2217, @Avasam)
* Fixed undefined names reported by Flake8/Ruff (#2101, @Avasam, @kxrob)