@@ -102,9 +102,9 @@ win32security.SetSecurityInfo(
 new_sd = win32security.GetSecurityInfo(ph, win32security.SE_KERNEL_OBJECT, all_info)
 
 if new_sd.GetSecurityDescriptorDacl().GetAceCount() != dacl_ace_cnt + 1:
-    print("New dacl doesn" "t contain extra ace ????")
+    print("New dacl doesn't contain extra ace ????")
 if new_sd.GetSecurityDescriptorSacl().GetAceCount() != sacl_ace_cnt + 1:
-    print("New Sacl doesn" "t contain extra ace ????")
+    print("New Sacl doesn't contain extra ace ????")
 if (
     win32security.LookupAccountSid("", new_sd.GetSecurityDescriptorOwner())[0]
     != "Power Users"
